--- a/TopShelfCustomer/TopShelfCustomer/Views/ProfileSettingsPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ProfileSettingsPage.xaml
@@ -57,10 +57,10 @@
 
                         <!-- Edit Username Setting -->
                         <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="20,0,0,20">
-                            <Label Text="Username" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
+                            <Label Text="Street Address" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                    VerticalTextAlignment="Center" HeightRequest="40"
                                    HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                            <Entry Text="{Binding Username}" IsReadOnly="True" HorizontalOptions="EndAndExpand"
+                            <Entry Text="{Binding UserAddress}" IsReadOnly="True" HorizontalOptions="EndAndExpand"
                                    HeightRequest="46" WidthRequest="220" FontFamily="{StaticResource NormalFont}" FontSize="15"
                                    Margin="10,0,40,0" TextColor="Gray" BackgroundColor="{StaticResource Accent}" />
                         </StackLayout>
